--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "url": "Sumanth290"
   },
   "scripts": {
+    "live": "live-server public/",
     "serve": "webpack-dev-server",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env=production",
     "build-babel": "babel src/app.jsx --out-file=public/scripts/app.js --presets=env,react --watch",
     "test": "jest --config=jest.config.json"
   },
@@ -36,8 +38,10 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
@@ -54,11 +58,12 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uuid": "^3.2.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "webpack-merge": "^4.1.2"
   }
 }
