--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env=production",
     "build-babel": "babel src/app.jsx --out-file=public/scripts/app.js --presets=env,react --watch",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start" : "node server/server.js",
+    "heroku-postbuild" : "npm run build:prod"
   },
   "author": "Sumanth Damarla",
   "license": "MIT",
@@ -38,6 +40,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
