--- a/package.json
+++ b/package.json
@@ -18,37 +18,32 @@
     "url": "Sumanth290"
   },
   "scripts": {
-    "live": "live-server public/",
     "serve": "webpack-dev-server",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env=production",
     "build-babel": "babel src/app.jsx --out-file=public/scripts/app.js --presets=env,react --watch",
     "test": "jest --config=jest.config.json",
-    "start" : "node server/server.js",
-    "heroku-postbuild" : "npm run build:prod"
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "Sumanth Damarla",
   "license": "MIT",
   "dependencies": {
+    "all": "^0.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.3",
-    "live-server": "^1.2.0",
     "moment": "^2.22.1",
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
-    "raf": "^3.4.0",
     "react": "^16.3.2",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^16.6.1",
@@ -56,17 +51,20 @@
     "react-modal": "^3.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.3.2",
+    "react-with-direction": "^1.3.0",
     "redux": "^4.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uuid": "^3.2.1",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.4"
+    "webpack": "^4.7.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "webpack-merge": "^4.1.2"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
+    "jest": "^22.4.3",
+    "raf": "^3.4.0",
+    "react-test-renderer": "^16.3.2",
+    "webpack-dev-server": "^3.1.4"
   }
 }
