--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uuid": "^3.2.1",
-    "webpack": "^4.7.0"
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
