--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^4.2.2",
     "react-with-direction": "^1.3.0",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "uuid": "^3.2.1",
