--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env=production",
     "build-babel": "babel src/app.jsx --out-file=public/scripts/app.js --presets=env,react --watch",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -62,12 +62,15 @@
     "webpack-cli": "^2.1.3"
   },
   "devDependencies": {
+    "cross-env": "^5.1.5",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
     "jest": "^22.4.3",
     "raf": "^3.4.0",
     "react-test-renderer": "^16.3.2",
+    "redux-mock-store": "^1.5.1",
     "webpack-dev-server": "^3.1.4"
   }
 }
